--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,26 +3,31 @@
   <button
     class="navbar-toggler"
     type="button"
-    (click)="collapse.toggle()"
+    (click)="collapse.toggle(isCollapsed)"
     [attr.aria-expanded]="!isCollapsed"
   >
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">>
+  <div class="collapse navbar-collapse" #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item" routerLinkActive="active">
+      <li class="nav-item" routerLinkActive="active" *ngIf="auth.isAuthenticated();">
         <a class="nav-link" [routerLink]="['/users']">Users</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active" *ngIf="auth.isAuthenticated();">
+        <a class="nav-link" [routerLink]="['/create']">Create</a>
       </li>
     </ul>
 
     <ul class="navbar-nav my-2 my-lg-0">
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" href="#">Logout</a>
+      <li class="nav-item" *ngIf="auth.isAuthenticated(); else login">
+        <a class="nav-link" href="#" (click)="logout($event)">Logout</a>
       </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/login']">Login</a>
-      </li>
+      <ng-template #login>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/login']">Login</a>
+        </li>
+      </ng-template>
     </ul>
   </div>
 </nav>
