--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,10 @@
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
+.table td {
+  min-width: 120px;
+}
+
 .form {
   &-error-text {
     color: red;
@@ -16,5 +20,30 @@
   @media (max-width: 768px) {
     width: 100%;
     display: block;
+  }
+}
+
+.main-content {
+  height: calc(100vh - 56px);
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0,0,0,.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity .2s;
+
+  &.show {
+    opacity: 1;
+    visibility: visible;
   }
 }
