--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
       <li class="nav-item" routerLinkActive="active" *ngIf="auth.isAuthenticated();">
         <a class="nav-link" [routerLink]="['/users']">Users</a>
       </li>
-      <li class="nav-item" routerLinkActive="active" *ngIf="auth.isAuthenticated();">
+      <li class="nav-item" routerLinkActive="active" *ngIf="auth.isAuthenticated() && auth.isAdmin()">
         <a class="nav-link" [routerLink]="['/create']">Create</a>
       </li>
     </ul>
@@ -32,6 +32,17 @@
   </div>
 </nav>
 
-<router-outlet></router-outlet>
+<main class="main-content">
+  <router-outlet></router-outlet>
+
+  <div class="overlay" [class.show]="loading.statusLoading() | async">
+    <div class="spinner-border text-dark" role="status"></div>
+  </div>
+</main>
+
+
+
+
+
 
 
