--- a/src/app/users-page/users-page.component.html
+++ b/src/app/users-page/users-page.component.html
@@ -1,28 +1,35 @@
 <div class="table-responsive">
   <table class="table table-striped">
     <thead class="thead-dark">
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">User</th>
-        <th scope="col">Email</th>
-        <th scope="col">Role</th>
-        <th scope="col"></th>
-      </tr>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">User</th>
+      <th scope="col">Email</th>
+      <th scope="col">Role</th>
+      <th scope="col"></th>
+    </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let user of users; index as idx">
-        <th scope="row">{{ idx + 1 }}</th>
-        <td>{{ user.name }}</td>
-        <td>{{ user.email }}</td>
-        <td>{{ user.permission }}</td>
-        <td>
+    <tr *ngFor="let user of users; index as idx">
+      <th scope="row">{{ idx + 1 }}</th>
+      <td>{{ user.name }}</td>
+      <td>{{ user.email }}</td>
+      <td>{{ user.permission }}</td>
+      <td>
+        <div class="btn-group" role="group" aria-label="Basic example">
           <a
             type="button"
             class="btn btn-info btn-sm"
             [routerLink]="['/users', user.id]"
           >Info</a>
-        </td>
-      </tr>
+          <a
+            type="button"
+            class="btn btn-info btn-sm"
+            [routerLink]="['/edit', user.id]"
+          >Edit</a>
+        </div>
+      </td>
+    </tr>
     </tbody>
   </table>
 </div>
