--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
         <a class="nav-link" [routerLink]="['/users']">Users</a>
       </li>
       <li class="nav-item" routerLinkActive="active" *ngIf="auth.isAuthenticated() && auth.isAdmin()">
-        <a class="nav-link" [routerLink]="['/create']">Create</a>
+        <a class="nav-link" [routerLink]="['/user/create']">Create</a>
       </li>
     </ul>
 
