--- a/src/app/overview-users/users-page/users-page.component.html
+++ b/src/app/overview-users/users-page/users-page.component.html
@@ -20,12 +20,12 @@
           <a
             type="button"
             class="btn btn-info btn-sm"
-            [routerLink]="['/users', user.id]"
+            [routerLink]="['/users', 'details', user.id]"
           >Info</a>
           <a
             type="button"
             class="btn btn-info btn-sm"
-            [routerLink]="['/edit', user.id]"
+            [routerLink]="['/user', 'edit', user.id]"
           >Edit</a>
         </div>
       </td>
