--- a/src/app/create-edit-users/create-page/create-page.component.html
+++ b/src/app/create-edit-users/create-page/create-page.component.html
@@ -1,4 +1,5 @@
 <div class="container pt-3">
+  <h4 class="mb-5 text-center text-sm-left">Создание пользователя</h4>
   <form action="" class="w-100" [formGroup]="createUserForm" (ngSubmit)="submit()">
     <div class="row">
 
