--- a/src/app/create-edit-users/create-page/create-page.component.html
+++ b/src/app/create-edit-users/create-page/create-page.component.html
@@ -44,7 +44,9 @@
           </div>
         </div>
       </div>
+    </div>
 
+    <div class="row">
       <div class="col col-12 col-md-6">
         <div class="form-group">
           <label for="input-password">Пароль</label>
@@ -55,6 +57,23 @@
               type="text"
               formControlName="password"
             >
+          </div>
+          <div
+            *ngIf="password?.invalid && (password?.touched || password?.dirty)"
+            class="validation"
+          >
+            <small class="form-error-text" *ngIf="password?.errors?.['required']">
+              Поле password не может быть пустым
+            </small>
+
+            <small class="form-error-text" *ngIf="password?.errors?.['required']">
+              Passwords do not match
+            </small>
+
+            <small class="form-error-text" *ngIf="password?.errors?.['minlength']">
+              Длина вашего пароля {{password?.errors?.['minlength']['actualLength']}}. Пароль должен быть
+              минимум {{password?.errors?.['minlength']['requiredLength']}} символов!
+            </small>
           </div>
         </div>
       </div>
@@ -70,9 +89,19 @@
               formControlName="confirmPassword"
             >
           </div>
+          <div
+            *ngIf="createUserForm.hasError('notSame') && (confirmPassword?.touched || confirmPassword?.dirty)"
+            class="validation"
+          >
+            <small class="form-error-text">
+              Пароли не совпадают
+            </small>
+          </div>
         </div>
       </div>
+    </div>
 
+    <div class="row">
       <div class="col col-12 col-md-6">
         <div class="form-group">
           <label for="inputState">Роль</label>
@@ -89,6 +118,66 @@
         </div>
       </div>
 
+      <div class="col col-12 col-md-6">
+        <div class="form-group">
+          <label for="inputState">Аватар пользователя</label>
+          <div class="custom-file mb-3">
+            <input
+              type="file"
+              class="custom-file-input"
+              id="validatedCustomFile"
+              (input)="onSelectAvatar($event)"
+            >
+            <label class="custom-file-label" for="validatedCustomFile">{{userAvatarFile}}</label>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row" formArrayName="skills">
+      <div class="col col-12">
+        <div class="btn-group" role="group" aria-label="Basic example">
+          <button
+            (click)="addSkillGroup()"
+            class="btn btn-success btn-sm"
+          ><i class="bi bi-plus-square"></i></button>
+          <button
+            (click)="removeSkillGroup()"
+            class="btn btn-danger btn-sm"
+          ><i class="bi bi-dash-square"></i></button>
+        </div>
+      </div>
+      <div class="col col-12">
+        <div class="row" *ngFor="let control of skillsControls.controls; let i = index" [formGroupName]="i">
+          <div class="col col-12">
+            <div class="form-group">
+              <label for="input-email">Место учебы</label>
+              <div class="input-group">
+                <input id="input-skill" class="form-control" type="text" formControlName="name">
+              </div>
+            </div>
+          </div>
+          <div class="col col-6">
+            <div class="form-group">
+              <label for="input-email">Дата начала</label>
+              <div class="input-group">
+                <input id="input-startAge" class="form-control" type="text" formControlName="startAge">
+              </div>
+            </div>
+          </div>
+          <div class="col col-6">
+            <div class="form-group">
+              <label for="input-email">Дата завершения</label>
+              <div class="input-group">
+                <input id="input-endAge" class="form-control" type="text" formControlName="endAge">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
       <div class="col col-12">
         <button
           type="submit"
