--- a/src/app/create-edit-users/edit-page/edit-page.component.html
+++ b/src/app/create-edit-users/edit-page/edit-page.component.html
@@ -68,6 +68,7 @@
               id="input-confirm-password"
               class="form-control"
               type="text"
+              formControlName="confirmPassword"
             >
           </div>
         </div>
@@ -86,6 +87,21 @@
 <!--              Поле Роль - обязательное-->
 <!--            </small>-->
 <!--          </div>-->
+        </div>
+      </div>
+
+      <div class="col col-12 col-md-6">
+        <div class="form-group">
+          <label for="inputState">Аватар пользователя</label>
+          <div class="custom-file mb-3">
+            <input
+              type="file"
+              class="custom-file-input"
+              id="validatedCustomFile"
+              (input)="onSelectAvatar($event)"
+            >
+            <label class="custom-file-label" for="validatedCustomFile">{{userAvatarFile}}</label>
+          </div>
         </div>
       </div>
 
