--- a/src/app/overview-users/users-page/users-page.component.html
+++ b/src/app/overview-users/users-page/users-page.component.html
@@ -3,6 +3,7 @@
     <thead class="thead-dark">
     <tr>
       <th scope="col">#</th>
+      <th scope="col">Avatar</th>
       <th scope="col">User</th>
       <th scope="col">Email</th>
       <th scope="col">Role</th>
@@ -12,6 +13,9 @@
     <tbody>
     <tr *ngFor="let user of users; index as idx">
       <th scope="row">{{ idx + 1 }}</th>
+      <th>
+        <img class="users-avatar" [src]="user.avatar.link" alt="user.avatar.name">
+      </th>
       <td>{{ user.name }}</td>
       <td>{{ user.email }}</td>
       <td>{{ user.permission }}</td>
@@ -21,13 +25,19 @@
             type="button"
             class="btn btn-info btn-sm"
             [routerLink]="['/users', 'details', user.id]"
-          >Info</a>
+          ><i class="bi bi-info-circle-fill"></i></a>
           <a
             *ngIf="auth.isAdmin()"
             type="button"
-            class="btn btn-info btn-sm"
+            class="btn btn-warning btn-sm"
             [routerLink]="['/user', 'edit', user.id]"
-          >Edit</a>
+          ><i class="bi bi-pencil-square"></i></a>
+          <a
+            *ngIf="auth.isAdmin()"
+            type="button"
+            class="btn btn-danger btn-sm"
+            (click)="deleteUser(user)"
+          ><i class="bi bi-trash-fill"></i></a>
         </div>
       </td>
     </tr>
