--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,11 @@
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+
+@import '~ngx-toastr/toastr';
+@import '~ngx-toastr/toastr-bs4-alert';
+
 .table td {
   min-width: 120px;
 }
