--- a/src/app/overview-users/users-page/users-page.component.scss
+++ b/src/app/overview-users/users-page/users-page.component.scss
@@ -1,4 +1,16 @@
 .users {
+  &-table {
+    th {
+      font-size: .8rem;
+      &.online {
+        color: green;
+      }
+
+      &.offline {
+        color: red;
+      }
+    }
+  }
   &-avatar {
     width: 40px;
     height: 40px;
