--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,6 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
 @import '~ngx-toastr/toastr';
-@import '~ngx-toastr/toastr-bs4-alert';
 
 .table td {
   min-width: 120px;
@@ -17,6 +16,7 @@
 
 .table td, .table th {
   text-align: center;
+  vertical-align: middle;
 }
 
 .form {
