--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
-  <a class="navbar-brand"  [routerLink]="['/users']">UserList</a>
+  <a class="navbar-brand"  [routerLink]="['/users']">{{ 'HEADER.TITLE' | translate }}</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -12,22 +12,29 @@
   <div class="collapse navbar-collapse" #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active" *ngIf="auth.isAuthenticated();">
-        <a class="nav-link" [routerLink]="['/users']">Users</a>
+        <a class="nav-link" [routerLink]="['/users']">{{ 'HEADER.USERS' | translate }}</a>
       </li>
       <li class="nav-item" routerLinkActive="active" *ngIf="auth.isAuthenticated() && auth.isAdmin()">
-        <a class="nav-link" [routerLink]="['/user/create']">Create</a>
+        <a class="nav-link" [routerLink]="['/user/create']">{{ 'HEADER.CREATE' | translate }}</a>
       </li>
     </ul>
 
     <ul class="navbar-nav my-2 my-lg-0">
+      <li class="nav-item dropdown">
+        <label class="m-0">
+          <select class="custom-select m-0" #langselect (change)="translate.use(langselect.value)">
+            <option *ngFor="let lang of translate.getLangs()" [value]="lang">{{lang}}.</option>
+          </select>
+        </label>
+      </li>
 
       <li class="nav-item" *ngIf="auth.isAuthenticated(); else login">
-        <a class="nav-link" href="#" (click)="logout($event)">Logout</a>
+        <a class="nav-link" href="#" (click)="logout($event)">{{ 'HEADER.LOGOUT' | translate }}</a>
       </li>
 
       <ng-template #login>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['/login']">Login</a>
+          <a class="nav-link" [routerLink]="['/login']">{{ 'HEADER.LOGIN' | translate }}</a>
         </li>
       </ng-template>
 
@@ -42,6 +49,8 @@
     <div class="spinner-border text-dark" role="status"></div>
   </div>
 </main>
+
+
 
 
 
