--- a/src/app/overview-users/user-page/user-page.component.html
+++ b/src/app/overview-users/user-page/user-page.component.html
@@ -1,22 +1,32 @@
-<div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
-  <div class="card p-4">
-    <div class=" image d-flex flex-column justify-content-center align-items-center">
-      <button class="btn btn-secondary"><img src="https://i.imgur.com/wvxPV9S.png" height="100" width="100"/></button>
-      <span class="name mt-3">Eleanor Pena</span> <span class="idd">@eleanorpena</span>
-      <div class="d-flex flex-row justify-content-center align-items-center gap-2"><span
-        class="idd1">Oxc4c16a645_b21a</span> <span><i class="fa fa-copy"></i></span></div>
-      <div class="d-flex flex-row justify-content-center align-items-center mt-3"><span class="number">1069 <span
-        class="follow">Followers</span></span></div>
-      <div class=" d-flex mt-2">
-        <button class="btn1 btn-dark">Edit Profile</button>
+<div class="container pt-3 user-detail">
+
+  <h4 class="mb-5 text-center text-sm-left">{{ 'USER.TITLE' | translate }}</h4>
+
+  <div class="row">
+    <div class="col col-12 col-lg-4 user-detail__avatar mb-5 mb-lg-0">
+      <img [src]="user.avatar.link" alt="" *ngIf="user.avatar.link">
+    </div>
+    <div class="col col-12 col-lg-8">
+      <h1 class="mb-3">{{user.name | nameTransform}}</h1>
+
+      <div class="user-detail__description mb-3">
+        <h4>{{ 'USER.EMAIL' | translate }}:</h4>
+        <span>{{user.email}}</span>
       </div>
-      <div class="text mt-3">
-        <span>Eleanor Pena is a creator of minimalistic x bold graphics and digital artwork.<br><br> Artist/ Creative Director by Day #NFT minting@ with FND night. </span>
+
+      <div class="user-detail__description mb-3">
+        <h4>{{ 'USER.ROLE' | translate }}:</h4>
+        <span>{{user.permission}}</span>
       </div>
-      <div class="gap-3 mt-3 icons d-flex flex-row justify-content-center align-items-center"><span><i
-        class="fa fa-twitter"></i></span> <span><i class="fa fa-facebook-f"></i></span> <span><i
-        class="fa fa-instagram"></i></span> <span><i class="fa fa-linkedin"></i></span></div>
-      <div class=" px-2 rounded mt-4 date "><span class="join">Joined May,2021</span></div>
+
+      <hr>
+
+      <h2 class="mb-3">{{ 'USER.EDUCATION' | translate }}</h2>
+
+      <div class="user-detail__skills" *ngFor="let skill of user.skills">
+        <p>{{skill.name}}, {{skill.startAt}} - {{skill.endAt}}</p>
+      </div>
+
     </div>
   </div>
 </div>
